--- a/Eventify/appsettings.json
+++ b/Eventify/appsettings.json
@@ -3,7 +3,12 @@
     "Default": "Server=COREI5\\SQLEXPRESS;Database=Eventify;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "AppSettings": {
-    "JwtSecret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET, IT CAN BE ANY STRING"
+    "JwtSecret": ""
+  },
+  "Cloudinary": {
+    "CloudName": "",
+    "ApiSecret": "",
+    "ApiKey": ""
   },
   "Logging": {
     "LogLevel": {
